--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
                             </a>
                         </div>
                     </div>
+                    <div class="portfolio-item animate-on-scroll">
+                        <img src="img/CrescerBem.png" alt="Projeto 4">
+                        <div class="portfolio-overlay">
+                            <h3>Projeto 3</h3>
+                            <p>Chá de Casa Nova: Lauane & Eduardo</p>
+                            <a href="https://ricklima991.github.io/CrescerBem/" target="_blank" class="btn-view">Ver Projeto</a>
+                            </a>
+                        </div>
                 </div>
             </div>
         </section>
