--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </header>
 
     <main>
+        <!-- Seção Hero/Banner -->
         <section id="inicio" class="hero">
             <div class="hero-content">
                 <h1>Transformando suas ideias em realidade!</h1>
@@ -36,10 +37,12 @@
             </div>
         </section>
 
+        <!-- Seção de Serviços -->
         <section id="servicos" class="services">
             <div class="container">
                 <h2 class="section-title">Meus Serviços</h2>
                 <div class="services-grid">
+                    <!-- Cards de serviços -->
                     <div class="service-card animate-on-scroll">
                         <i class="fas fa-laptop-code"></i>
                         <h3>Design de Sites</h3>
@@ -59,70 +62,86 @@
             </div>
         </section>
 
+        <!-- Seção de Portfólio -->
         <section id="portfolio" class="portfolio">
             <div class="container">
                 <h2 class="section-title">Meus Projetos</h2>
                 <div class="portfolio-grid">
+                    <!-- Projeto 1 -->
                     <div class="portfolio-item animate-on-scroll">
                         <img src="img/1_Assembleia-de-Deus-Ministerio-de-Santos.png" alt="Projeto 1">
                         <div class="portfolio-overlay">
                             <h3>Projeto 1</h3>
                             <p>Assembleia de Deus Ministério de Santos</p>
                             <a href="https://assembleia-de-deus-santo-bl17zlt.gamma.site/" target="_blank" class="btn-view">Ver Projeto</a>
-                            </a>
                         </div>
                     </div>
+                    <!-- Projeto 2 -->
                     <div class="portfolio-item animate-on-scroll">
                         <img src="img/1_Construindo-um-Portfolio-Profissional-com-React.png" alt="Projeto 2">
                         <div class="portfolio-overlay">
                             <h3>Projeto 2</h3>
                             <p>Construindo um Portfólio Profissional com React</p>
                             <a href="https://gamma.app/docs/vyqycnxa6ht379t" target="_blank" class="btn-view">Ver Projeto</a>
-                            </a>
                         </div>
                     </div>
+                    <!-- Projeto 3 -->
                     <div class="portfolio-item animate-on-scroll">
                         <img src="img/Cha-de-Casa-Nova-Lauane-and-Eduardo-Estao-Prontos.png" alt="Projeto 3">
                         <div class="portfolio-overlay">
                             <h3>Projeto 3</h3>
                             <p>Chá de Casa Nova: Lauane & Eduardo</p>
                             <a href="https://cha-de-casa-nova-xf6taja.gamma.site/chadecasanovalauaneeduardo" target="_blank" class="btn-view">Ver Projeto</a>
-                            </a>
                         </div>
                     </div>
+                    <!-- Projeto 4 -->
                     <div class="portfolio-item animate-on-scroll">
                         <img src="img/CrescerBem.png" alt="Projeto 4">
                         <div class="portfolio-overlay">
-                            <h3>Projeto 3</h3>
+                            <h3>Projeto 4</h3>
                             <p>Chá de Casa Nova: Lauane & Eduardo</p>
                             <a href="https://ricklima991.github.io/CrescerBem/" target="_blank" class="btn-view">Ver Projeto</a>
-                            </a>
                         </div>
+                    </div>
+                    <!-- Projeto 5 -->
+                    <div class="portfolio-item animate-on-scroll">
+                        <img src="img/DncWeather.png" alt="Projeto 5">
+                        <div class="portfolio-overlay">
+                            <h3>Projeto 5</h3>
+                            <p>Descubra Mais com Precisão: Previsões do Tempo e endereços em tempo real.</p>
+                            <a href="https://ricklima991.github.io/Desafio-2-Dnc-consumo-de-API/" target="_blank" class="btn-view">Ver Projeto</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
+        <!-- Seção de Contato -->
         <section id="contato" class="contact">
             <div class="container">
                 <h2 class="section-title">Entre em Contato</h2>
                 <div class="contact-container">
+                    <!-- Informações de contato -->
                     <div class="contact-info">
+                        <!-- Email -->
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <h3>Email</h3>
-                            <p><a href="mailto:henriqueluizd91@gmail.com">henriqueluizd91@gmail.com
-                            </a></p>
+                            <p><a href="mailto:henriqueluizd91@gmail.com">henriqueluizd91@gmail.com</a></p>
                         </div>
+                        <!-- WhatsApp -->
                         <div class="contact-item">
                             <i class="fab fa-whatsapp"></i>
                             <h3>WhatsApp</h3>
                             <p><a href="https://wa.me/5511999999999" target="_blank">(11) 918266394</a></p>
                         </div>
+                        <!-- LinkedIn -->
                         <div class="contact-item">
                             <i class="fab fa-linkedin"></i>
                             <h3>LinkedIn</h3>
                             <p><a href="https://linkedin.com/in/henrique-luiz-dutra-a10346146/" target="_blank">linkedin.com/in/seu-perfil</a></p>
                         </div>
+                        <!-- GitHub -->
                         <div class="contact-item">
                             <i class="fab fa-github"></i>
                             <h3>GitHub</h3>
@@ -130,6 +149,7 @@
                         </div>
                     </div>
                     
+                    <!-- Formulário de contato -->
                     <form class="contact-form" action="https://formspree.io/f/seu-form-id" method="POST">
                         <div class="form-group">
                             <label for="name">Nome</label>
@@ -154,8 +174,10 @@
         </section>
     </main>
 
+    <!-- Rodapé -->
     <footer class="footer">
         <div class="footer-content">
+            <!-- Links redes sociais -->
             <div class="social-links">
                 <a href="https://linkedin.com/in/seu-perfil" target="_blank" title="LinkedIn">
                     <i class="fab fa-linkedin"></i>
@@ -174,6 +196,7 @@
         </div>
     </footer>
 
+    <!-- JavaScript -->
     <script src="js/main.js"></script>
 </body>
-</html> 
+</html>
